--- a/container/css/ui.css
+++ b/container/css/ui.css
@@ -24,6 +24,13 @@
     background-color: #8fc661;
     color: #ffffff !important;
 }
+.btn-danger {
+    background-color: #E74C3C;
+    color: #ffffff !important;
+}
+.btn-danger:hover {
+    background-color: #C0392B;
+}
 
 .btn-small {
     font-size: 12px;
