--- a/container/css/mobile.css
+++ b/container/css/mobile.css
@@ -144,7 +144,7 @@
         float: none;
     }
     .jobs-back-link a,
-    .jobs-back-link .fa {
+    .jobs-back-link .fas {
         font-size: 14px;
     }
 
