--- a/container/css/white-main.css
+++ b/container/css/white-main.css
@@ -189,7 +189,7 @@ nav ul li a {
 
     border-right: 1px solid rgba(0, 0, 0, 0.25);
 }
-nav ul .home .fa {}
+
 nav ul .right {
     float: right;
 }
@@ -355,8 +355,7 @@ nav form input[type="text"] {
     font-weight: inherit;
 }
 nav form:after {
-    font-family: "FontAwesome";
-    content: "\f002";
+    content: "&#128269;";
     margin-left: -16px;
 }
 
@@ -534,11 +533,6 @@ input[type="submit"]:hover {
     margin: 0 20px 20px 0;
     padding: 0;
     overflow: hidden;
-}
-
-.menu .home a:before {
-    font-family: "FontAwesome";
-    content: "\f015"; /* \00a0 is   */
 }
 
 
@@ -1075,7 +1069,6 @@ h3.entry-title {
 
 
 #nav-below ul li a { text-transform: none; background-color: #0cb8fc; }
-#nav-below .fa {}
 
 .nav-below-stats {
     text-align: center;
@@ -1460,7 +1453,6 @@ footer[role="contentinfo"] .attribution ul li a { font-size: 90%; }
     text-decoration: none;
 }
 
-.mmenu ul .home .fa {}
 .mmenu ul .right {
     float: right;
 }
@@ -1527,7 +1519,7 @@ footer[role="contentinfo"] .attribution ul li a { font-size: 90%; }
     padding: 0 24px;
     color: #FFFFFF;
 }
-.mmenu .textwidget .fa {
+.mmenu .textwidget .fas {
     border-radius: 100%;
     background-color: #0cb8fc;
     color: #FFFFFF;
@@ -1569,8 +1561,7 @@ footer[role="contentinfo"] .attribution ul li a { font-size: 90%; }
 }
 .responsive-search:after,
 .hmenu #searchform:after {
-    font-family: "FontAwesome";
-    content: "\f002";
+    content: "&#128269;";
     margin-left: -24px;
     color: rgba(255, 255, 255, 0.5);
 }
@@ -1655,7 +1646,7 @@ footer[role="contentinfo"] .attribution ul li a { font-size: 90%; }
     text-decoration: none;
     color: #FFFFFF !important;
 }
-.shiny-menu .fa {
+.shiny-menu .fas {
     margin-right: 4px;
 }
 
@@ -1954,14 +1945,14 @@ a:hover { color: #FFFFFF; }
     text-decoration: none;
     border: 3px solid #0cb8fc;
 }
-#content-wide #nav-below .nav-previous a:hover .fa,
-#content-wide #nav-below .nav-next a:hover .fa {
+#content-wide #nav-below .nav-previous a:hover .fas,
+#content-wide #nav-below .nav-next a:hover .fas {
     color: #0cb8fc !important;
 }
-#content-wide #nav-below .nav-previous .fa {
+#content-wide #nav-below .nav-previous .fas {
     margin: 0 0 0 8px;
 }
-#content-wide #nav-below .nav-next .fa {
+#content-wide #nav-below .nav-next .fas {
     margin: 0 8px 0 0;
 }
 
@@ -2006,7 +1997,7 @@ a:hover { color: #FFFFFF; }
 .dropbtn:hover {
     color: #0cb8fc;
 }
-.dropbtn .fa {
+.dropbtn .fas {
     margin: 0 0 0 4px;
 }
 .cinnamon-dropdown {
@@ -2070,7 +2061,7 @@ a:hover { color: #FFFFFF; }
     text-decoration: none;
     display: block !important;
 }
-.cinnamon-dropdown-options-content .fa {
+.cinnamon-dropdown-options-content .fas {
     font-size: 14px;
     margin: 0 2px;
 }
@@ -2109,8 +2100,7 @@ a:hover { color: #FFFFFF; }
 }
 .ip-sorter-primary form:after {
     color: #999999;
-    font-family: 'FontAwesome';
-    content: '\f002';
+    content: '&#128269;';
     display: inline-block;
     margin-left: -32px;
 }
