--- a/container/css/white-mobile.css
+++ b/container/css/white-mobile.css
@@ -145,7 +145,7 @@
         float: none;
     }
     .jobs-back-link a,
-    .jobs-back-link .fa {
+    .jobs-back-link .fas {
         font-size: 14px;
     }
 
