--- a/container/css/ui.css
+++ b/container/css/ui.css
@@ -4,32 +4,40 @@
     margin: 0 4px 4px 0;
     text-decoration: none;
     border: 0 none;
-    border-radius: 2px;
+    border-radius: 3px;
     white-space: nowrap;
 }
 .btn:hover {
     text-decoration: none;
-    box-shadow: inset 0 0 48px rgba(0, 0, 0, 0.25);
 }
 
 .btn-primary {
-    background-color: #0cb8fc;
+    background-color: #005ffb;
     color: #ffffff !important;
+}
+.btn-primary:hover {
+    background-color: #0053dc;
 }
 .btn-secondary {
-    background-color: #555555;
+    background-color: #4b4b4b;
     color: #ffffff !important;
+}
+.btn-secondary:hover {
+    background-color: #414141;
 }
 .btn-tertiary {
-    background-color: #8fc661;
+    background-color: #2ecc71;
     color: #ffffff !important;
 }
+.btn-tertiary:hover {
+    background-color: #28b362;
+}
 .btn-danger {
-    background-color: #E74C3C;
+    background-color: #ea3b35;
     color: #ffffff !important;
 }
 .btn-danger:hover {
-    background-color: #C0392B;
+    background-color: #ce332f;
 }
 
 .btn-small {
@@ -94,7 +102,7 @@ Regenerate collection images
     cursor: pointer;
 }
 .checkbox:checked:before {
-    background-color: #006afa;
+    background-color: #005ffb;
 }
 .checkbox:checked:after {
     -ms-transform: translateX(18px);
