--- a/container/css/feed.css
+++ b/container/css/feed.css
@@ -69,13 +69,13 @@
     margin: 0 12px 0 0;
 }
 .feed-avatar img {
-    border-radius: 2px;
+    border-radius: 50%;
 }
 .feed-author-to-follow .avatar {
     display: inline-block;
     margin: 0 12px 0 0;
     background-color: black;
-    border-radius: 2px;
+    border-radius: 50%;
 }
 .feed-author-to-follow .follow,
 .feed-author-to-follow .unfollow {
@@ -174,7 +174,7 @@
 
 
 .regular-link:hover {
-    color: #0cb8fc;
+    color: #0053dc;
 }
 
 
