--- a/container/css/main.css
+++ b/container/css/main.css
@@ -197,7 +197,6 @@ nav ul li {
     position: relative;
 }
 nav ul li a {
-    font-family: "Montserrat";
     text-transform: uppercase;
     display: block;
     line-height: 40px;
@@ -1054,7 +1053,6 @@ h1.entry-title {
     border-bottom: 1px solid rgba(255, 255, 255, 0.25);
     padding-bottom: 24px;
     line-height: 1;
-    font-family: "Montserrat";
 }
 h1.entry-title small {
     font-size: 14px;
@@ -1097,7 +1095,6 @@ h3.entry-title {
 
 .widget-container h3.widget-title,
 .cinnamon-user-profile h3 {
-    font-family: "Montserrat";
     font-weight: 400;
     font-size: 18px;
     text-transform: uppercase;
@@ -1503,7 +1500,7 @@ footer[role="contentinfo"] .attribution ul li a { font-size: 90%; }
 
 #tabs-nav { list-style: none; margin: 0; padding: 0; overflow: auto; }
 #tabs-nav li { float: left; margin: 0; padding: 16px 56px; cursor: pointer; border-right: 1px solid rgba(255, 255, 255, 0.05); }
-#tabs-nav li a { font-family: "Montserrat"; font-size: 18px; text-transform: uppercase; text-decoration: none; color: rgba(255, 255, 255, 0.25); font-weight: 400; }
+#tabs-nav li a { font-size: 18px; text-transform: uppercase; text-decoration: none; color: rgba(255, 255, 255, 0.25); font-weight: 400; }
 #tabs-nav li.active a { color: rgba(255, 255, 255, 1); }
 #tabs-nav li:hover a { color: rgba(255, 255, 255, 1); }
 #tabs-nav li:hover,
@@ -1560,7 +1557,7 @@ footer[role="contentinfo"] .attribution ul li a { font-size: 90%; }
 .pre { left: 0; }
 .next { right: 0; }
 
-.infinite-carousel .inlay { position: absolute; bottom: 0; padding: 16px 24px; font-family: "Montserrat"; text-transform: uppercase; z-index: 2; width: 100%; }
+.infinite-carousel .inlay { position: absolute; bottom: 0; padding: 16px 24px; text-transform: uppercase; z-index: 2; width: 100%; }
 
 .infinite-carousel .date { display: inline-block; padding: 8px; font-size: 12px; }
 .infinite-carousel .category { display: inline-block; padding: 8px; box-shadow: inset 0 0 0 3px rgba(255, 255, 255, 0.25); font-size: 12px; }
@@ -1708,14 +1705,12 @@ footer[role="contentinfo"] .attribution ul li a { font-size: 90%; }
 .mmenu .separator { border-top: 1px solid #005ffb; margin: 18px 24px; }
 
 .montserrat-medium {
-    font-family: "Montserrat";
     text-transform: uppercase;
     font-size: 12px;
     font-weight: 400;
 }
 .montserrat-medium:hover { text-decoration: none; }
 .montserrat-regular {
-    font-family: "Montserrat";
     text-transform: uppercase;
     font-size: 14px;
     font-weight: 400;
@@ -1724,7 +1719,6 @@ footer[role="contentinfo"] .attribution ul li a { font-size: 90%; }
 .mmenu-enabled { opacity: 0.5; }
 
 .mmenu .widget-title {
-    font-family: "Montserrat";
     font-weight: 400;
     text-transform: uppercase;
     color: #005ffb;
@@ -1751,7 +1745,6 @@ footer[role="contentinfo"] .attribution ul li a { font-size: 90%; }
     line-height: 32px;
 }
 .mmenu .textwidget .uppercase {
-    font-family: "Montserrat";
     text-transform: uppercase;
     font-size: 12px;
 }
@@ -1816,8 +1809,7 @@ footer[role="contentinfo"] .attribution ul li a { font-size: 90%; }
 .account-content ul li ul li {
     width: 100%;
 }
-.account-content ul li ul li a { 
-    font-family: "Montserrat";
+.account-content ul li ul li a {
     text-transform: uppercase;
     background-color: #0d1214;
     display: block;
@@ -2386,11 +2378,11 @@ a:hover { color: #ffffff; }
 
 
 
-#cinnamon-cards .cinnamon-sortable h4 { text-transform: uppercase; font-family: "Montserrat"; font-weight: 700; font-size: 120%; }
+#cinnamon-cards .cinnamon-sortable h4 { text-transform: uppercase; font-weight: 700; font-size: 120%; }
 #cinnamon-cards .sort { font-size: 100%; font-weight: 400; }
 #cinnamon-cards .cinnamon-sortable input { border: 0 none; padding: 8px; }
 
-#author-cards .cinnamon-sortable h4 { text-transform: uppercase; font-family: "Montserrat"; font-weight: 700; font-size: 120%; }
+#author-cards .cinnamon-sortable h4 { text-transform: uppercase; font-weight: 700; font-size: 120%; }
 #author-cards .sort { font-size: 100%; font-weight: 400; }
 #author-cards .cinnamon-sortable input { border: 0 none; padding: 8px; }
 
